Fix label spacing

--- a/static/styles/calendar/calendar.scss
+++ b/static/styles/calendar/calendar.scss
@@ -91,7 +91,7 @@
 
 .create-course-event, .create-team-event, .create-videoconference {
     label {
-        margin-right: 0.5rem;
+        margin-left: 0.5rem;
     }
     .toggle {
         height: 2rem !important;
